Part_2/confs/app-one.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
spec:
  selector:
    matchLabels:
      app: app-one
  replicas: 1 
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
      - name: app-one
        image: holysemicolon/uwu-nginx:1.0
        ports:
        - containerPort: 80
