Part_2/confs/app-three.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
spec:
  selector:
    matchLabels:
      app: app-three
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
      - name: app-three
        image: modem7/docker-rickroll
        ports:
        - containerPort: 8080
