Part_2/confs/app-two.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
spec:
  selector:
    matchLabels:
      app: app-two
  replicas: 3 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
      - name: app-two
        image: nginx:1.14.2
        ports:
        - containerPort: 80
