Part_2/confs/app-one-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-one
spec:
  selector:
    app: app-one
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
