Part_2/confs/app-three-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-three
spec:
  clusterIP: 10.43.25.253
  selector:
    app: app-three
  ports:
  - name: http
    port: 8080
    targetPort: 8081
  type: ClusterIP
