Part_2/confs/app-two-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-two
spec:
  selector:
    app: app-two
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
